added jdbc configuration with h2 database integration